--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@
             <form action="upload" method="post" enctype="multipart/form-data">
               <label><input type="checkbox" class="mode" name="md" value="l2c" checked="checked"/>Line to Color</label>
               <label><input type="checkbox" class="mode" name="md" value="c2l"/>Color to Line</label>
+              <label><input type="checkbox" class="mode" name="md" value="c2c"/>Color to Color</label>
               <div class="input-group">
                 <label class="input-group-btn">
                   <span class="btn btn-primary">
